--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,7 @@ body {
   color: var(--color-on-background);
   
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
